# awaas-ai

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test_env.py
.github/workflows/: ci.yml
src/: graph_engine.py  state.py  test_agents.py  test_data_pipeline.py  test_graph.py  test_reporting.py
src/agents/: nodes.py
src/data_connectors/: aggregator.py  indian_api_client.py
src/reporting/: pdf_generator.py
src/utils/: geocoding.py  logging_config.py
tests/: test_architecture.py
